--- a/SkillSphere/SkillSphere.csproj
+++ b/SkillSphere/SkillSphere.csproj
@@ -27,11 +27,13 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
     <None Remove="Model\" />
     <None Remove="Model\Db\" />
+    <None Remove="Data\" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Model\" />
     <Folder Include="Model\Db\" />
+    <Folder Include="Data\" />
   </ItemGroup>
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
