updated table relations, added initial migration

--- a/SkillSphere/appsettings.json
+++ b/SkillSphere/appsettings.json
@@ -6,6 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost,1433;Database=SkillSphereDB;User=sa;Password=Qwerty123;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  }
 }
 
